Criando entidade Genre e seus testes